tests/NormalTests/paczka1/fuzzy1/18899661.err
Error in line 10: wgLJp S866 96,1
Error in line 23: o7U3zu A213 -1,6
Error in line 5: uGSw A584 61,8
